--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
@@ -33,7 +34,7 @@ body {
     transform-origin: center;
 }
 
-.spinner-wrapper img{
+.spinner-wrapper img {
     width: 100%;
     height: 100%;
 }
